k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mango-web-service
spec:
  selector:
    app: mango
    tier: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
